// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal enableBackgroundUI when enableBackgroundUI is false renders children 1`] = `
<Styled(Portal)>
  <styled.div
    data-state="open"
    transitionName="modal"
  >
    <TransitionGroup
      childFactory={[Function]}
      component="div"
    >
      <CSSTransition
        appear={true}
        classNames="modal-background"
        key="modal"
        timeout={500}
      >
        <styled.div
          data-element="modal-background"
          transitionName="modal-background"
        />
      </CSSTransition>
    </TransitionGroup>
    <TransitionGroup
      childFactory={[Function]}
      component="div"
    />
  </styled.div>
</Styled(Portal)>
`;

exports[`Modal enableBackgroundUI when enableBackgroundUI is true renders children 1`] = `
<Styled(Portal)>
  <styled.div
    data-state="open"
    transitionName="modal"
  >
    <TransitionGroup
      childFactory={[Function]}
      component="div"
    />
    <TransitionGroup
      childFactory={[Function]}
      component="div"
    />
  </styled.div>
</Styled(Portal)>
`;
